log.txt
g++ -std=c++11 -Wall -Wextra -Werror -pedantic-errors -DNDEBUG -I/usr/local/lib/opencv-3.1.0/include/ -c main.cpp
main.cpp: In function 'int main(int, const char**)':
main.cpp:7:2: error: 'ImageProc' was not declared in this scope
  ImageProc proc;
  ^
main.cpp:7:2: note: suggested alternative:
In file included from main_aux.h:1:0,
                 from main.cpp:1:
SPImageProc.h:17:7: note:   'sp::ImageProc'
 class ImageProc {
       ^
main.cpp:7:12: error: expected ';' before 'proc'
  ImageProc proc;
            ^
In file included from /usr/include/unistd.h:226:0,
                 from main_aux.h:29,
                 from main.cpp:1:
main.cpp:12:22: error: invalid conversion from 'long int' to 'SP_CONFIG_MSG {aka sp_config_msg_t}' [-fpermissive]
  SP_CONFIG_MSG msg = NULL;
                      ^
main.cpp:26:2: error: 'SPPOint' was not declared in this scope
  SPPOint** QeuryImage = NULL;
  ^
main.cpp:26:12: error: 'QeuryImage' was not declared in this scope
  SPPOint** QeuryImage = NULL;
            ^
In file included from main.cpp:1:0:
main_aux.h:41:14: error: '__VA__ARGS__' was not declared in this scope
  printf(fmt, __VA__ARGS__); \
              ^
main.cpp:33:3: note: in expansion of macro 'SEND_ERROR'
   SEND_ERROR("%s", INVALID_COMMAND);
   ^
main_aux.h:41:14: error: '__VA__ARGS__' was not declared in this scope
  printf(fmt, __VA__ARGS__); \
              ^
main_aux.h:49:3: note: in expansion of macro 'SEND_ERROR'
   SEND_ERROR("%s" , __VA__ARGS__); \
   ^
main.cpp:37:3: note: in expansion of macro 'CHECK_RET'
   CHECK_RET(strcmp(argv[1], C), SRTCMP_ERROR);
   ^
main.cpp:38:35: error: invalid conversion from 'const char*' to 'char*' [-fpermissive]
   CHECK_RET(check_file_name(argv[2]), WRONG_FORMAT_ERROR); 
                                   ^
main_aux.h:48:8: note: in definition of macro 'CHECK_RET'
  if (!(cond)) \
        ^
main_aux.h:41:14: error: '__VA__ARGS__' was not declared in this scope
  printf(fmt, __VA__ARGS__); \
              ^
main_aux.h:49:3: note: in expansion of macro 'SEND_ERROR'
   SEND_ERROR("%s" , __VA__ARGS__); \
   ^
main.cpp:38:3: note: in expansion of macro 'CHECK_RET'
   CHECK_RET(check_file_name(argv[2]), WRONG_FORMAT_ERROR); 
   ^
main.cpp:44:2: error: 'conf' was not declared in this scope
  conf = spConfigCreate(conf_file, msg);
  ^
main.cpp:44:38: error: cannot convert 'FILE* {aka _IO_FILE*}' to 'const char*' for argument '1' to 'sp_config_t* spConfigCreate(const char*, SP_CONFIG_MSG*)'
  conf = spConfigCreate(conf_file, msg);
                                      ^
main.cpp:47:10: error: expected '(' before 'msg'
   switch msg
          ^
main.cpp:149:1: error: expected '}' at end of input
 }
 ^
main.cpp:10:8: error: unused variable 'new_image_file' [-Werror=unused-variable]
  FILE* new_image_file = NULL;
        ^
main.cpp:13:13: error: unused variable 'features' [-Werror=unused-variable]
  SPPoint*** features = NULL;
             ^
main.cpp:14:6: error: unused variable 'points_done' [-Werror=unused-variable]
  int points_done = 0;
      ^
main.cpp:15:17: error: unused variable 'confing' [-Werror=unused-variable]
  const SPConfig confing = NULL;
                 ^
main.cpp:16:12: error: unused variable 'total_features' [-Werror=unused-variable]
  SPPoint** total_features = NULL;
            ^
main.cpp:17:6: error: unused variable 'total_n_feature' [-Werror=unused-variable]
  int total_n_feature = 0;
      ^
main.cpp:18:7: error: unused variable 'num_feat_arr' [-Werror=unused-variable]
  int* num_feat_arr = NULL;
       ^
main.cpp:19:14: error: unused variable 'root' [-Werror=unused-variable]
  KDTreeNode* root = NULL;
              ^
main.cpp:20:6: error: unused variable 'num_of_images' [-Werror=unused-variable]
  int num_of_images;
      ^
main.cpp:21:6: error: unused variable 'pos' [-Werror=unused-variable]
  int pos = 0;
      ^
main.cpp:22:6: error: unused variable 'flag' [-Werror=unused-variable]
  int flag = 0;
      ^
main.cpp:23:6: error: unused variable 'new_n_feat' [-Werror=unused-variable]
  int new_n_feat;
      ^
main.cpp:24:8: error: unused variable 'new_image_path' [-Werror=unused-variable]
  char* new_image_path;
        ^
main.cpp:25:13: error: unused variable 'bqp' [-Werror=unused-variable]
  SPBPQueue* bqp = NULL;
             ^
main.cpp:27:7: error: unused variable 'images_indexes' [-Werror=unused-variable]
  int* images_indexes = NULL;
       ^
main.cpp:28:6: error: unused variable 'K_close' [-Werror=unused-variable]
  int K_close;
      ^
main.cpp:29:7: error: unused variable 'is_minimal' [-Werror=unused-variable]
  bool is_minimal;
       ^
main.cpp:149:1: error: expected '}' at end of input
 }
 ^
In file included from main.cpp:1:0:
main_aux.h:43:7: error: label 'CLEANUP' used but not defined
  goto CLEANUP; \
       ^
main.cpp:33:3: note: in expansion of macro 'SEND_ERROR'
   SEND_ERROR("%s", INVALID_COMMAND);
   ^
cc1plus: all warnings being treated as errors
make: *** [main.o] Error 1
